--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -8,4 +8,8 @@
         android:id="@+id/show_menu"
         android:icon="@drawable/ic_baseline_people_24"
         android:title="@string/show_menu"/>
+    <item
+        android:id="@+id/settings_menu"
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="@string/settings_menu"/>
 </menu>
