collapsing layout upgraded

--- a/app/src/main/res/layout/activity_single_city.xml
+++ b/app/src/main/res/layout/activity_single_city.xml
@@ -9,8 +9,9 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:background="@color/white">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        >
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar_layout"
@@ -20,65 +21,80 @@
             app:expandedTitleGravity="top"
             app:expandedTitleMarginStart="48dp"
             app:expandedTitleMarginEnd="64dp"
-            app:contentScrim="@color/white"
-            >
+            app:contentScrim="@color/white">
+
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/sc_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:text="Zagreb"
-                android:textSize="40sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
+                <androidx.appcompat.widget.Toolbar
+
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@color/white"
+                    app:collapseContentDescription="Zagreb"
+                    app:layout_collapseMode="pin"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/sc_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:text="Zagreb"
+                    android:textColor="@color/black"
+                    android:textSize="40sp"
+                    android:textStyle="bold"
+                    app:layout_collapseMode="parallax"
+                    app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
                 <TextView
                     android:id="@+id/sc_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/sc_name"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:text="Mon, March 15"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="24dp"/>
+                    android:layout_marginTop="24dp"
+                    android:text="Mon, March 15"
+                    app:layout_collapseMode="parallax"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sc_name" />
 
                 <TextView
                     android:id="@+id/sc_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="09:32 AM (CET)"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/sc_date"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="3dp"/>
+                    android:layout_marginTop="3dp"
+                    android:text="09:32 AM (CET)"
+                    app:layout_collapseMode="parallax"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sc_date" />
 
                 <TextView
                     android:id="@+id/sc_weather"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Light Rain"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/sc_time"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="3dp"
-                    />
+                    android:text="Light Rain"
+                    app:layout_collapseMode="parallax"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sc_time" />
 
                 <ImageView
                     android:id="@+id/sc_weather_img"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
-                    android:src="@drawable/ic_c"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/sc_name"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
+                    android:src="@drawable/ic_c"
+                    app:layout_collapseMode="parallax"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sc_name"
 
                     />
 
@@ -86,26 +102,95 @@
                     android:id="@+id/sc_temp"
                     android:layout_width="96dp"
                     android:layout_height="64dp"
-                    app:layout_constraintEnd_toStartOf="@+id/sc_weather_img"
-                    app:layout_constraintTop_toBottomOf="@+id/sc_name"
-                    android:text="23°"
-                    android:textSize="60sp"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="8dp"
+                    android:text="23°"
+                    android:textSize="60sp"
+                    app:layout_collapseMode="parallax"
+                    app:layout_constraintEnd_toStartOf="@+id/sc_weather_img"
+                    app:layout_constraintTop_toBottomOf="@+id/sc_name" />
+
+                <include
+                    android:id="@+id/wi_temp"
+                    layout="@layout/weather_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="31dp"
+                    android:layout_weight="1"
+                    app:layout_constraintEnd_toStartOf="@+id/wi_wind"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_chainStyle="spread"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sc_weather" />
+
+                <include
+                    android:id="@+id/wi_wind"
+                    layout="@layout/weather_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="31dp"
+
+                    android:layout_weight="1"
+                    app:layout_constraintEnd_toStartOf="@id/wi_hum"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/wi_temp"
+                    app:layout_constraintTop_toBottomOf="@+id/sc_weather" />
+
+
+                <include
+                    android:id="@+id/wi_hum"
+                    layout="@layout/weather_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="31dp"
+                    android:layout_weight="1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/wi_wind"
+                    app:layout_constraintTop_toBottomOf="@+id/sc_weather" />
+
+                <include
+                    android:id="@+id/wi_press"
+                    layout="@layout/weather_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:layout_constraintEnd_toStartOf="@+id/wi_vis"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_chainStyle="spread"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/wi_temp" />
+
+                <include
+                    android:id="@+id/wi_vis"
+                    layout="@layout/weather_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:layout_constraintEnd_toStartOf="@id/wi_acc"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/wi_press"
+                    app:layout_constraintTop_toBottomOf="@+id/wi_wind"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="16dp"/>
+
+
+                <include
+                    android:id="@+id/wi_acc"
+                    layout="@layout/weather_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/wi_vis"
+                    app:layout_constraintTop_toBottomOf="@+id/wi_hum"
                     />
 
 
-            <androidx.appcompat.widget.Toolbar
-
-                android:id="@+id/toolbar"
-                android:background="@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:layout_constraintTop_toTopOf="parent"
-                />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
