--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/input_menu"
-        android:title="@string/input_menu"
-        android:icon="@drawable/ic_baseline_add_circle_outline_24"/>
+        android:title="@string/search"
+        android:icon="@drawable/ic_baseline_search_24"
+        />
     <item
         android:id="@+id/show_menu"
         android:icon="@drawable/ic_baseline_people_24"
