--- a/app/src/main/res/values-hr/string.xml
+++ b/app/src/main/res/values-hr/string.xml
@@ -35,4 +35,5 @@
     <string name="today">Danas</string>
     <string name="next_days">Sljedecih 5 dana</string>
     <string name="search">Pretrazi</string>
+    <string name="my_cities">Moji gradovi</string>
 </resources>
