--- a/app/src/main/res/layout/child_item.xml
+++ b/app/src/main/res/layout/child_item.xml
@@ -26,8 +26,8 @@
 
     <ImageView
         android:id="@+id/ci_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:src="@drawable/ic_c"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ci_title"
