--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="48dp"
         android:src="@drawable/ic_c"
 
-        />
+        app:tint="@color/tint_primary" />
     <TextView
         android:id="@+id/w_desc"
         android:layout_width="match_parent"
