recent files added

--- a/app/src/main/res/values-hr/string.xml
+++ b/app/src/main/res/values-hr/string.xml
@@ -36,4 +36,5 @@
     <string name="next_days">Sljedecih 5 dana</string>
     <string name="search">Pretrazi</string>
     <string name="my_cities">Moji gradovi</string>
+    <string name="recent">Nedavno</string>
 </resources>
