--- a/app/src/main/res/layout/activity_about_me.xml
+++ b/app/src/main/res/layout/activity_about_me.xml
@@ -44,16 +44,65 @@
         android:id="@+id/about_sofa_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/surface_2"
         app:layout_constraintTop_toBottomOf="@+id/about_sofa">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
+            <ImageView
+                android:layout_width="107dp"
+                android:layout_height="18dp"
+                android:src="@drawable/ic_logo_sofascore_lettering"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="29dp"
+                android:layout_marginTop="31dp"
+                android:layout_marginBottom="31dp"/>
 
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_logo_android"
+                android:layout_marginEnd="58dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                />
 
-        </LinearLayout>
+        </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
+
+    <include layout="@layout/about_me_reusable_layout"
+        android:id="@+id/about_app"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/about_sofa_card"/>
+
+    <include layout="@layout/about_me_reusable_layout"
+        android:id="@+id/about_api"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/about_app"/>
+
+    <include layout="@layout/about_me_reusable_layout"
+        android:id="@+id/about_dev"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/about_api"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
