--- a/app/src/main/res/layout/activity_single_city.xml
+++ b/app/src/main/res/layout/activity_single_city.xml
@@ -117,6 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="31dp"
                     android:layout_weight="1"
+                    app:layout_collapseMode="parallax"
                     app:layout_constraintEnd_toStartOf="@+id/wi_wind"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintHorizontal_chainStyle="spread"
@@ -129,7 +130,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="31dp"
-
+                    app:layout_collapseMode="parallax"
                     android:layout_weight="1"
                     app:layout_constraintEnd_toStartOf="@id/wi_hum"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -144,6 +145,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="31dp"
                     android:layout_weight="1"
+                    app:layout_collapseMode="parallax"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/wi_wind"
@@ -155,6 +157,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    app:layout_collapseMode="parallax"
                     app:layout_constraintEnd_toStartOf="@+id/wi_vis"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintHorizontal_chainStyle="spread"
@@ -167,6 +170,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    app:layout_collapseMode="parallax"
                     app:layout_constraintEnd_toStartOf="@id/wi_acc"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/wi_press"
@@ -181,6 +185,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    app:layout_collapseMode="parallax"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/wi_vis"
